fixer vlaidation